--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "swr": "2.1.5",
     "telegraf": "^4.13.1",
     "viem": "1.10.9",
-    "vite": "4.2.0",
+    "vite": "4.4.9",
     "wagmi": "1.4.1",
     "wido": "0.4.1",
     "zod": "^3.22.2"
@@ -57,7 +57,7 @@
     "@types/react-dom": "18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
-    "@vitejs/plugin-react": "^4.0.4",
+    "@vitejs/plugin-react": "4.0.4",
     "autoprefixer": "^10.4.15",
     "babel-loader": "^9.1.3",
     "bump": "^0.2.5",
